# resume-qr-code

./: .gitignore  Elijah.Baraw.Resume.tex  latex_commands.sh  make.sh  optimize_compression.py  package-lock.json  package.json  rolling_hash.py  test.js.out.js
html-min/: latex_commands.sh
html-min/compress/: optimize_compression.py  regpack-final.js
html-min/templates/: minimal.html
html-out/: resume.html  resume.min.html
local/: RegPack v5.0.4.html  doRegPack.js  regpack_ex.js  resume.regpat.html  test-execution.js  test-html-execution.js  test-return-value.js  test.js
rust-compressor/: .gitignore  Cargo.toml  pyproject.toml
rust-compressor/src/: compressor.rs  interface.rs  interface_non_rolling_hash.rs  lib.rs  main.rs  modular.rs  non_rolling_hash.rs  one_zero.rs  optimal_substring.rs  rolling_hash.rs
rust-compressor/tests/: test.rs
