[package]
name = "rolling_hash_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "rolling_hash_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
num-traits = "0.2"
num-bigint = "0.4"
num-iter = "0.1"

[dev-dependencies]
paste = "1.0"
tested-trait = "0.1.0"
